inicio fix, contraste tchart divs fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -326,7 +326,7 @@
   margin: 10px auto;
   padding: 12px;
   border-radius: var(--radius);
-  opacity: 0.9;
+  opacity: 0.95;
   align-items: center;
   width: 50%;
  
